plugins {
    id 'java-library'
    id 'groovy'
    id 'checkstyle'

    id 'com.github.johnrengelman.shadow' version '5.1.0'
    id 'org.unbroken-dome.test-sets' version '2.2.1'
}

repositories {
    mavenLocal()
    jcenter()
}

sourceCompatibility = 1.8

version = 0.1

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.10'
    annotationProcessor 'org.projectlombok:lombok:1.18.10'

    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
    implementation 'io.projectreactor:reactor-core:3.3.1.RELEASE'
    implementation 'io.projectreactor:reactor-tools:3.3.1.RELEASE'
    implementation 'org.eclipse.jetty.websocket:websocket-client:9.4.24.v20191120'

    testImplementation 'org.codehaus.groovy:groovy-all:2.5.7'
    testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
    testImplementation 'io.projectreactor:reactor-test:3.3.0.RELEASE'
    testImplementation 'org.assertj:assertj-core:3.11.1'

    checkstyle('com.github.sevntu-checkstyle:sevntu-checks:1.32.0')
}

jar {
    manifest {
        attributes 'Implementation-Title': 'Java client for MTM connector',
                'Implementation-Version': archiveVersion.getOrNull(),
                'Main-Class': project.group + '.Main'
    }
}

shadowJar {
    archiveBaseName.set('mt-remote-client')
    archiveClassifier.set(null)
}

checkstyle {
    toolVersion = '8.14'
    configFile = new File("checkstyle.xml")
    ignoreFailures = false
}

testSets {
    integrationTest { dirName = 'test-integration' }
}
